Version 0.9-50: Matthieu Stigler (20/5/2018)
 -new: ar_mean, to compute the long-term mean of an AR process
 -MAJOR: tsDyn now depends on R 2.13, not 2.10 (i.e. at least 2011 version, not 2010)

Version 0.9-48: Matthieu Stigler (20/5/2018)
 -minor: fix two issues in R test, reduce tolerance
 -minor: create internal coefVec
 -minor: new nlVar methods tets file
 -minor: adjust slightly the example from TVAR, TVECM

Version 0.9-47: Matthieu Stigler (15/5/2018)   never published on CRAN
 -fix small issue in lstar code.

Version 0.9-46: Matthieu Stigler (21/1/2018)
 -new: predict.TVAR
 -new: rewrite TVAR.gen, cleaner TVAR.boot and TVAR.sim
 -fix bug: nameB in TVAR had issue for some cases.
 -many minor updates in doc

Version 0.9-45: Matthieu Stigler (29/8/2017)  never published on CRAN
 -minor: change registration of c code
 -minor: add dataset m.unrate, previously in (now archived) FinTs
 -minor: small documentation updates, use canonical urls, etc

Version 0.9-44: Matthieu Stigler (22/5/2016)
 -new: vcov.TVAR
 -minor fix: TVAR_LRtest now uses robust QR instead of manual solve()...
 -fix bug: vcov.VAR corrected, was wrong
 -minor fixes:  VAR.sim did not return all args, internal insertCol did not handle well just one row, typos in man file VECM
 -minor new: summary.VAR now outputs component coefMat, more consistent output
 -minor new: TVAR outputs df.residual
 -vcov: improve vcov for VAR/VECM, using faster chol2inv saving previous qr
 -minor fixes in NAMESPACE, urls citations, etc 

Version 0.9-43: Matthieu Stigler (23/4/2015)
 -minor fixes: add checking in selectLSTAR in case of convergence issue, rename lstar.Rout.save as created issues on other platforms

Version 0.9-42: Matthieu Stigler (15/4/2015) never published on CRAN
 -full rewrite of VAR.sim, VAR.gen, now cleaner, allows for exogeneous predictions, etc.
 -remove predict.VECM
 -fix small issue in DESC file (pkg description in title case, only one maintainer).

Version 0.9-41: Matthieu Stigler (26/8/2014)